added musics to the game, next is board sounds